记住密码完成

--- a/view_complex/html/login.html
+++ b/view_complex/html/login.html
@@ -44,12 +44,13 @@
 			<center>
 					<button type="button" id="login-btn" class="btn btn-default " onclick="mySubmit()">登入系统</button>
 				<div style="display: inline;">
-					<input type="checkbox" value="remeberPwd" id="remeberPwd">
+					<input type="checkbox"  id="isRemember" name="isRemember" value="true">
 					<span style="font-size: 13px;">记住密码</span>
 				</div>
 			</center>
 			<center>
 				<span id="status-msg" style="color: red;"></span>
+				<span id="login-msg" style="color: red;"></span>
 			</center>
 		</div>
 	</div>
