--- a/view_complex/html/sysconfig.html
+++ b/view_complex/html/sysconfig.html
@@ -22,9 +22,9 @@
         <h1>配置选择<small>进行预订选项或者自定义配置</small></h1>
     </div>
         <div class="form-group">
-            <label for="sysconfig-select" class="col-sm-2 control-label">选择配置</label>
+            <label for="sysconfig-select" class="col-sm-2 control-label"  >选择配置</label>
             <div class="col-sm-10">
-                <select class="form-control" id="sysconfig-select">
+                <select class="form-control" id="sysconfig-select" name="sysconfigSelect" required>
                     <option value="1">配置1</option>
                     <option value="2">配置1</option>
                     <option value="0">自定义</option>
