--- a/view_complex/html/login.html
+++ b/view_complex/html/login.html
@@ -8,11 +8,53 @@
     <title>登录</title>
 
     <link href="../../res/css/bootstrap.min.css" rel="stylesheet">
-	<link href="../css/index.css" rel="stylesheet">
+<!--	<link href="../css/index.css" rel="stylesheet">-->
+	<style>
+		body { background-color: transparent; overflow: hidden; }
+		body, html { height: 100%; font-size: 14px; color: #4b4b4b; }
+
+	</style>
 </head>
 <body>
-	<div class="container login">
-		<div class="row mt10">
+	<div class="container-fluid">
+		<form class="form-horizontal">
+			<div class="form-group">
+				<label for="username" class="col-sm-2 control-label">用户名</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" id="userName" placeholder="请输入用户名">
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="password" class="col-sm-2 control-label">密码</label>
+				<div class="col-sm-10">
+					<input type="password" class="form-control" id="passWord" placeholder="请输入密码">
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="col-sm-offset-2 col-sm-10">
+					<div class="checkbox">
+						<label>
+							<input type="checkbox"  id="isRemember" name="isRemember" value="true">记住密码
+						</label>
+					</div>
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="col-sm-offset-2 col-sm-10">
+					<button type="button" id="login-btn" class="btn btn-default " onclick="mySubmit()">登入系统</button>
+
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="col-sm-offset-2 col-sm-10">
+					<span id="status-msg" style="color: red;"></span>
+					<span id="login-msg" style="color: red;"></span>
+				</div>
+			</div>
+		</form>
+	</div>
+	<!--<div class="container login">
+		&lt;!&ndash;<div class="row mt10">
 			<div class="col-xs-3 text-right text1">host地址：</div>
 			<div class="col-xs-9"><input type="text" class="form-control input1" id="host" value=""></div>
 		</div>
@@ -31,7 +73,7 @@
 		<div class="row mt10">
 			<div class="col-xs-3 text-right text1">rmanager：</div>
 			<div class="col-xs-9"><input type="input" class="form-control input1" id="rmanager" value=""></div>
-		</div>
+		</div>&ndash;&gt;
 		<div class="row mt10">
 			<div class="col-xs-3 text-right text1">用户名：</div>
 			<div class="col-xs-9"><input type="input" class="form-control input1" id="userName" value=""></div>
@@ -54,7 +96,7 @@
 			</center>
 		</div>
 	</div>
-
+-->
     <script src="../../res/js/jquery.init.js"></script>
     <script src="../../res/js/jquery.min.js"></script>
     <script src="../../res/js/bootstrap.min.js"></script>
